# sql-agent

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: .env.example  config.yaml.example
examples/: basic_usage.py  complete_flow_demo.py  descriptions.txt  mysql_example.py  query_understanding_demo.py  schema.yaml  schema_intelligence_demo.py  schema_intelligence_example.py
src/: __init__.py  config.py
src/adapters/: __init__.py  base.py  mysql_adapter.py  oracle_adapter.py  postgresql_adapter.py  sqlite_adapter.py
src/agents/: __init__.py  base_agent.py  sql_generator.py  sql_validator.py
src/llm_client/: __init__.py  bedrock_client.py  strands_client.py
src/orchestration/: __init__.py  pipeline.py
src/query_understanding/: __init__.py
src/schema_intelligence/: __init__.py  manager.py  model_builder.py  models.py  providers.py  relationship_discovery.py  smart_loader.py
src/schemas/: __init__.py  models.py
src/sql_understanding/: __init__.py
src/utils/: __init__.py  errors.py  logging.py  metrics.py
tests/: __init__.py
tests/integration/: test_pipeline.py
tests/load/: locustfile.py
tests/unit/: test_adapters.py  test_schemas.py
